made changes in css code

--- a/styles.css
+++ b/styles.css
@@ -224,19 +224,25 @@ main > section{
 /* STARTING SECTION STYLES */
 #starting div{
     /* TO DO: Use flexbox to adjust the display of this div: content should wrap, justify with space between the elements, and include a gap of 16 pixels */
-    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 16px;
 }
 
 #starting section{
     /* TO DO: Use flexbox to adjust the display of this section. Contents should display in a column, do not need to wrap, and should have a gap of 1rem between the items */
-    
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    gap: 1rem;
     max-width: 525px;
     margin: 0 auto;
 }
 
 #starting img{
     /* TO DO: Use the order property to adjust the display in the sections here so that the images appear before the heading */
-	
+	order: -1;
 }
 
 #starting p{
@@ -252,7 +258,11 @@ main > section{
 
 #more-flex div{
     /* TO DO: Use flexbox to adjust the display of this div. The items should be allowed to wrap, they should be center justified, and should have a gap of 1rem */
-	
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
 
 #more-flex svg{
@@ -292,7 +302,10 @@ button:focus{
 /* BOXES SECTION STYLES */
 #boxes{
     /* TO DO: Adjust the display in this section using flexbox. The items should be able to wrap, they should be justified with even space, and there should be a gap of 1rem */
-	
+	display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 1rem;
 	padding-top: 1rem;
 }
 
@@ -304,7 +317,9 @@ button:focus{
 	box-shadow: var(--box-shadow-sm);
 	text-align: center;
     /* TO DO: Adjust the display of the individual divs in the boxes section so that the elements inside of them will will display centered both horizontally and vertically */
-	
+	display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #box1{
@@ -347,12 +362,16 @@ button:focus{
 	border-radius: 8px;
 	box-shadow: var(--box-shadow-lg);
     /* TO DO: Adjust the display of the content in the modal (popup) uses flexbox to display in a single column with a 0.5rem gap between the items */
-	
+	display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
 
 #modal{
     /* TO DO: Adjust the layout of the div that will dim the page when the background is open so that when the modal is open it will be centered horizontally and vertically on the page */
-	
+	display: flex;
+    align-items: center;
+    justify-content: center;
 	position: fixed;
 	z-index: 3;
 	left: 0;
@@ -374,6 +393,7 @@ button:focus{
 	box-shadow: none;
 	background-color: transparent;
     /* TO DO: Adjust the display of the button used to close the modal so that is is aligned to the upper right corner of the modal */
+    align-self: flex-end;
 }
 
 #closeModal:hover svg{
@@ -398,21 +418,25 @@ button:focus{
 @media screen and (min-width: 375px){
     nav ul{
         /* TO DO: Use flexbox to adjust the display of the navigation in this media query so that the elements have 1 rem of space between them and are justified with space between the elements */
-
+        display: flex;
+        gap: 1rem;
+        justify-content: space-between;
         max-width: 650px;
         margin: 0 auto;
     }
 
     nav li{
         /* TO DO: Use the flex grow property to allow the nav list items to be larger in their container when there is more space */
-        
+        flex-grow: 1;
     }
 }
 
 @media screen and (min-width: 875px){
     header{
         /* TO DO: Use flexbox to adjust the display of the header at wider screen widths with space between the elements and a gap of 32 pixels */
-        
+        display: flex;
+        justify-content: space-between;
+        gap: 32px;
         padding: 2rem;
         max-width: calc(1100px - 4rem);
     }
